5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_1803.log
== TEST (2019-03-28 10:26:57) 
-- CODE:
valor1 = int(input("valor1: ")) * 5
valor2 = int(input("valor2: ")) * 4
valor3 = int(input("valor3: ")) * 3
valor4 = int(input("valor4: ")) * 2

r = int((valor1 + valor2 + valor3 + valor4) % 11)
 print(r)
-- ERROR:
File "XXXX", line 7
    print(r)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:10) 
-- CODE:
valor1 = int(input("valor1: ")) * 5
valor2 = int(input("valor2: ")) * 4
valor3 = int(input("valor3: ")) * 3
valor4 = int(input("valor4: ")) * 2

r = int((valor1 + valor2 + valor3 + valor4) % 11)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2 = int(input()) * 4
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:27:29) 
-- CODE:
valor1 = int(input("valor1: ")) * 5
valor2 = int(input("valor2: ")) * 4
valor3 = int(input("valor3: ")) * 3
valor4 = int(input("valor4: ")) * 2

r = int((valor1 + valor2 + valor3 + valor4) % 11)

print(r)
-- EXECUTION TIME:
0.128533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1803/main.py", line 2, in <module>
    valor2 = int(input()) * 4
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:51) 
-- CODE:
valor1 = int(input("valor1: ")) * 5
valor2 = int(input("valor2: ")) * 4
valor3 = int(input("valor3: ")) * 3
valor4 = int(input("valor4: ")) * 2

r = int((valor1 + valor2 + valor3 + valor4) % 11)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2 = int(input()) * 4
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:52:35) 
-- CODE:
num = int(input("valor: "))
mil = num // 1000
restm = num % 100
cem = restm // 100
restc = restm % 100
dez = restc // 10
um = restc % 10
a1 = um * 2 + dez * 3 + cem * 4 + mil * 5
a2 = a1 % 11
print(a2)



-- EXECUTION TIME:
0.131038
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
8
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:52:53) 
-- CODE:
num = int(input("valor: "))
mil = num // 1000
restm = num % 100
cem = restm // 100
restc = restm % 100
dez = restc // 10
um = restc % 10
a1 = um * 2 + dez * 3 + cem * 4 + mil * 5
a2 = a1 % 11
print(a2)



-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:53:32) 
-- CODE:
num = int(input("valor: "))
mil = num // 1000
restm = num % 1000
cem = restm // 100
restc = restm % 100
dez = restc // 10
um = restc % 10
a1 = um * 2 + dez * 3 + cem * 4 + mil * 5
a2 = a1 % 11
print(a2)



-- EXECUTION TIME:
0.17148
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
